# Fastapi-Clothing-Store

./: .gitignore  .pre-commit-config.yaml  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 2024_06_30_2315-8288009b447c_database_creation.py  2024_07_01_1606-64ddb6cdb70f_database_creation.py  2024_07_02_1937-07306c84d02e_add_create_ar_from_accessories.py  2024_07_05_1742-20c927af0fdb_create_ar_accessories.py
src/: app.py  create_app.py
src/api/: __init__.py  clothing.py
src/api/api_v1/: __init__.py  accessories.py  clothing.py  footwear.py
src/configurations/: __init__.py  app.py  database.py  redis_cache.py
src/custom_data_types/: __init__.py  accessories.py  clothing.py  footwear.py
src/dependencies/: __init__.py  redis.py  service.py
src/enums/: __init__.py  accessories_size.py  clothing_size.py
src/errors/: __init__.py  errors_api.py  errors_db.py
src/helpers/: db_helper.py
src/models/: __init__.py  accessories.py  base.py  clothing.py  footwear.py
src/models/mixins/: __init__.py  updated_created_at.py  uuid_pk.py
src/repositories/: accessories.py  clothing.py  footwear.py
src/repository/: __init__.py  accessories.py  clothing.py  footwear.py
src/schemas/: __init__.py  accessories.py  clothing.py  footwear.py
src/services/: __init__.py  accessories.py  clothing.py  footwear.py
src/utils/: case_converter.py
src/utils/custom_data_types/: __init__.py  clothing.py
