[tool.poetry]
name = "clothingstore"
version = "0.1.0"
description = ""
authors = ["yakhovets-o <yakhovetso@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = { extras = ["all"], version = "^0.111.0" }
sqlalchemy = "^2.0.31"
asyncpg = "^0.29.0"
alembic = "^1.13.2"
fastapi-pagination = "^0.12.25"


[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
flake8 = "^7.1.0"
isort = "^5.13.2"
mypy = "^1.10.1"

[tool.black]
line-length = 90
target-version = ['py312']


[tool.isort]
profile = "black"
skip_glob = ["alembic/*"]
lines_after_imports = 2
skip_gitignore = true
# определяет стиль размещения импортов в многострочных блоках всего 12 их
multi_line_output = 3
# перед комментом будет установлена пустая строка
ensure_newline_before_comments = true
# разбивает длинные импорты на несколько строк
split_on_trailing_comma = true
# после последнего импорта будет добавлена запятая последнего импорта, когда используются скобки
include_trailing_comma = true
# контролирует, используются ли скобки вокруг импортов
use_parentheses = true
# позволяет настроить количество импортов, которые будут размещены в виде сетки, независимо от длины строки
force_grid_wrap = 0



[tool.mypy]
mypy_path = "./src"
follow_imports = "silent"
strict_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
disallow_any_generics = true
check_untyped_defs = true
no_implicit_reexport = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
